feat: formatting, consistent use of formatted